--- a/homework6.tex
+++ b/homework6.tex
@@ -10,10 +10,10 @@
 \title{CS350 homework 6}
 \author{Yuchen Hou}
 \maketitle
+
 \section{SCC}
-The following algorithm answers the question.
 \begin{lstlisting}
-Boolean answer(Graph G, Node v, Node v1) {
+Boolean answer(Graph G) {
 	for (Set<Node> scc: G.partitionIntoSCC()) {
 		if (scc.getSize() > 1) {
 			return false;
@@ -22,10 +22,9 @@ Boolean answer(Graph G, Node v, Node v1) {
 	return true;
 }
 \end{lstlisting}
-The worst case performance is O(V + E), where V is the node count and E is the
-edge count.
+The worst case performance is O(V + E).
+
 \section{Shortest paths}
-The following algorithm answers the question.
 \begin{lstlisting}
 Boolean answer(Graph G, Node v, Node v1) {
 	for (Edge e: G.getAllEdges()) {
@@ -50,12 +49,12 @@ Boolean answer(Graph G, Node v, Node v1) {
 	}
 }
 \end{lstlisting}
+
 \section{Shortest paths}
-The following algorithm answers the question.
 \begin{lstlisting}
 Boolean answer(Graph G, Node v, Node v1) {
-	if (minColorCount(G, v, v1, "red") >= 4 && minColorCount(G, v, v1,
-	"green" >= 4) {
+	if (minColorCount(G, v, v1, "red") >= 4
+		&& minColorCount(G, v, v1, "green" >= 4) {
 		return true;
 	} else {
 		return false;
@@ -72,8 +71,8 @@ Integer minColorCount(Graph G, Node v, Node v1, Color color) {
 	return shortestPaths(G, v).getCost(v1);
 }
 \end{lstlisting}
+
 \section{Shortest paths}
-The following algorithm answers the question.
 \begin{lstlisting}
 Boolean answer(Graph G, Node s0) {
 	if s0.isGood() {
@@ -84,17 +83,12 @@ Boolean answer(Graph G, Node s0) {
 			G.removeNode(n);
 		}
 	}
-	for (Edge e: G.getAllEdges()) {
-		e.setWeight(-1);
+	for (Set<Node> scc: G.partitionIntoSCC()) {
+		if (scc.getSize() > 1 && s0.canReach(scc)) {
+			return false;
+		}
 	}
-	// Bellman Ford shortest paths algorithm raises NegativeCycleException
-	when it detects a negative cycle
-	try {
-		BellmanFordShortestPaths(G, s0).getAllCosts();
-		return true;
-	} catch (NegativeCycleException e) {
-		return false;
-	}
+	return true;
 }
 \end{lstlisting}
 \end{document}
