--- a/homework8.tex
+++ b/homework8.tex
@@ -10,6 +10,7 @@
 \title{CS350 homework 8}
 \author{Yuchen Hou}
 \maketitle
+
 \section{RSA}
 Steps:
 \begin{enumerate}
@@ -19,27 +20,37 @@ Steps:
   \item decrypt cipher code to plain code: 2883783099 456562021 9711147868
   \item decode plain code to plain text: exxgtxg0!! iorore0ea !taaaitxrx
 \end{enumerate}
-Reference:
-\begin{enumerate}
-  \item online factorization database: http://factordb.com
-  \item online equation solver: http://www.wolframalpha.com
-\end{enumerate}
+
 \section{n-ary Huffman coding}
-Assume the algorithm uses n digits to encode a character set. This algorithm
-uses a priority queue where the node with lowest probability is given highest
-priority. Initially, the queue only contains one node for every character. The
-Huffman tree also contains one node for every character. The algorithm runs as
-follows:
+Assume the algorithm uses n digits to encode a character set.
 \begin{lstlisting}
-while (queue is not empty) {
-	dequeue n nodes;
-	create a parent node for these n nodes;
-	assign a unique digit to every edge from the parent to its children
-	assign the sum of probabilities of the children to that of the parent;
-	enqueue the parent;
+Class Node {
+	public Character character;
+	public Float probability;
 }
-The code of each character is the path from the root to its node.
+Tree<Node> huffman(Set<Node> characters) {
+	PriorityQueue<Node> queue = new PriorityQueue<Node>();
+	Tree<Node> tree = new Tree<Node>();
+	for (Node character: characters) {
+		queue.add(character); // lowest probability -> highest priority.
+		tree.addNode(character);
+	}
+	while (queue.size() != 0) {
+		Node parent = new Node("", 0);
+		tree.addNode(parent);
+		for (Integer i: range(0, n)) {
+			Node child = queue.remove();
+			tree.getNode(parent).probability += child.probability;
+			tree.addEdge(parent, child, i);
+		}
+		queue.add(parent);
+	}
+	return tree;
+}
 \end{lstlisting}
+The code of each character is the digit sequence on the path from the root to
+its corresponding leaf node.
+
 \section{Security protocols}
 A few current techniques are as follows:
 \begin{enumerate}
