--- a/homework1.tex
+++ b/homework1.tex
@@ -1,5 +1,3 @@
-%%This is a very basic article template.
-%%There is just one section and two subsections.
 \documentclass{article}
 \usepackage{listings}
 \usepackage{amsmath}
@@ -7,44 +5,34 @@
 \usepackage{tabularx}
 \usepackage{graphicx}
 \usepackage{cite}
-
 \begin{document}
 \title{CS350 homework 1}
 \author{Yuchen Hou}
 \maketitle
 
-\section{Language}
+\section{Decision problems to languages}
 
 \subsection{}
-\{'(n, p, q)' $\mid$ n.getType() == Number and p.getType() == Prime and
-q.getType() == Prime and n == pq\}
+$\{<(n, p, q)>: p \in Prime \land q \in Prime \land n == pq\}$
 
 \subsection{}
-\{'n' $\mid$ $\exists$(p, q) n == pq and p.getType() == Prime and q.getType() ==
-Prime\}
+$\{<n>: \exists p, q \in Prime \land n == pq\}$
 
 \subsection{}
-\{'(A, w)' $\mid$ A.getType() == NFA and w.getType() == Word and A.accept(w)\}
+$\{<A, w>: A \in NFA \land w \in Word \land A \ accepts \ w)\}$
 
 \subsection{}
-\{'A' $\mid$ $\exists$w A.getType() == NFA and w.getType() == Word and
-A.accept(w)\}
+$\{<A>: A \in NFA \land \exists w \in Word \land A \ accepts \ w\}$
 
 \section{Big O}
 
 \subsection{$f(n) = 2n^3 - 18n$}
-$\begin{cases}
-2n^3 = O(n^3)\\
--18n = O(n)
-\end{cases}$
-$\implies f(n) = O(n^3) \implies f(n) = O(n^4) \\$
-$O(log(n))$ grows exponetially slower than $O(n)$ \\
-$\implies$ $O(n^2log(n))$ grows exponentially slower than $O(n^3)$ \\
-$\implies$ $f(n) != O(n^2log(n))$
+$f(n) < 2n^3 < 2n^4 \implies f(n) = O(n^3) \land f(n) = O(n^4)$\\
+$\forall c \ \exists m: \forall n > m \ f(n) > cn^2 \log(n) \implies$ $f(n) \neq
+O(n^2 \log(n))$
 
 \subsection{$f(n) = 3n^22^{2n}$}
-a.e. $f(n) < 2^n 2^{2n} = 2^{3n}
-\implies f(n) = 2^{O(n)}$
+$\exists m: \forall n > m \ f(n) < 2^n 2^{2n} = 2^{3n} \implies f(n) = 2^{O(n)}$
 
 \section{Probelm definition}
 A map can be an instance of a graph where a road is an edge and a junction is
